refact: `a3` and `sort`

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,5 +5,12 @@ include_directories(src)
 aux_source_directory(src SRC)
 
 add_compile_options(-std=c17 -O3)
-add_executable(main ${SRC})
-target_link_libraries(main m)
+
+link_libraries(m)
+add_library(rf src/rf.c)
+
+add_executable(a3 src/a3.c)
+target_link_libraries(a3 rf)
+
+add_executable(sort src/sort.c)
+target_link_libraries(sort rf)
